# stew_cpp_project_generator

./: Cargo.toml
skelton/: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.bash_template
skelton/cmake/: bin.cmake  common.cmake  dev.cmake  lib.cmake
skelton/src/: main.cpp
src/: main.rs
